feat: added id methods for getting entities